[gd_scene load_steps=2 format=3 uid="uid://b7uqdgsswwovd"]

[ext_resource type="Script" path="res://scenes/UI/save_menu/save_slot/save_slot.gd" id="1_r32np"]

[node name="SaveSlot" type="MarginContainer"]
custom_minimum_size = Vector2(1112, 90)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_r32np")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SaveTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SaveTitle"

[node name="SaveDate" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SaveDate"

[node name="Button" type="Button" parent="."]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
